--- a/ДЗ-4/styles/style.css
+++ b/ДЗ-4/styles/style.css
@@ -16,7 +16,8 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  color: #fff;
+  color: #dbdbdb;
+;
 }
 
 .card {
