--- a/ДЗ-4/styles/style.css
+++ b/ДЗ-4/styles/style.css
@@ -59,7 +59,7 @@ body {
   max-width: 100%;
 }
 
-span {
+hr{
   display: flex;
   width: 100%;
   border: 1px solid #35353594;
@@ -70,4 +70,7 @@ span {
 }
 a {
   text-decoration: none;
+}
+a:visited {
+  color: #0645AD   ;
 }
