--- a/ДЗ-4/styles/styles2.css
+++ b/ДЗ-4/styles/styles2.css
@@ -79,7 +79,8 @@ body {
   font-weight: bold;
 }
 
-button {
+.btn__outlined {
+  cursor: pointer;
   background-color: #000000;
   color: #c9c8c8;
   border-radius: 5px;
@@ -88,7 +89,13 @@ button {
   padding: 10px 15px 10px 15px;
 }
 
-button:hover{
-    background-color: #2e2e2e;
-    border: none;
+.btn__filled{
+  cursor: pointer;
+  color: #c9c8c8;
+  border-radius: 5px;
+  border: 1px solid #6b6a6a;
+  font-weight: bold;
+  padding: 10px 15px 10px 15px;
+  background-color: #2e2e2e;
+  border: none;
 }
